--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -8,7 +8,6 @@
     background-color: rgba(255,255,255,.95);
     padding: 20px;
     border-bottom: 1px solid #ddd;
-    position: fixed;
     width: 100%;
     z-index: 1;
 
@@ -27,6 +26,14 @@
             -moz-background-size: 285px 36px;
             -o-background-size: 285px 36px;
             background-size: 285px 36px;
+        }
+        @media screen and (max-width: 540px) {
+            width: 142px;
+            height: 18px;
+            -webkit-background-size: 142px 18px;
+            -moz-background-size: 142px 18px;
+            -o-background-size: 142px 18px;
+            background-size: 142px 18px;
         }
     }
 
